--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -202,7 +202,7 @@ if ($this->countDownloadsOverall > 0) {
                                     $showErrMsg = true;
                                 }
                                 if($product['is_pling_excluded_now'] == 1) {
-                                    $errorMsg .= "<li>This Product has bin excluded from plings</li>";
+                                    $errorMsg .= "<li>This Product has been excluded from plings</li>";
                                     $showErrMsg = true;
                                 }
                             } else {
@@ -215,7 +215,7 @@ if ($this->countDownloadsOverall > 0) {
                                     $showErrMsg = true;
                                 }
                                 if($product['is_pling_excluded'] == 1) {
-                                    $errorMsg .= "<li>This Product has bin excluded from plings</li>";
+                                    $errorMsg .= "<li>This Product has been excluded from plings</li>";
                                     $showErrMsg = true;
                                 }
                             } 
