--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -44,7 +44,7 @@
         <p></p>
         <p>In order to receive your Plings, you need to provide a valid PayPal option under your OpenDesktop account settings.</p>
         <!--<p>We are currently evaluating using Bitcoin as a payout method in the future.-->
-        <p>Products to be plinged require a libre license. Certain products also require a link to a source hosting site (see list below), like e.g. cgit.kde.org or github. This is different from just providing the source-code, but to provide an easy setup for collaboration and transparent changes.</p>
+        <p>Products to be plinged require a libre license. Certain products also require a link to the online source repository (see list below), like e.g. cgit.kde.org or github. This is different from just providing the source-code, but to provide an easy setup for collaboration and transparent changes.</p>
         <p></p>
         <p>We hope this form of compensation values those who put time and effort into creating free and open source software & content and leads to an ever increase of quality and sustainability.        </p>
             
