--- a/application/modules/default/views/scripts/product/viewscripts/input_source_url.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_source_url.phtml
@@ -32,6 +32,14 @@
                id="<?= $this->escape($this->element->getName()) ?>"
                class="form-control"
                type="text"
+               pattern="https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)"
+               maxlength="200"
+               aria-required="false"
+               aria-invalid="false"
+               data-rule-minlength="10"
+               data-rule-maxlength="200"
+               data-msg-minlength="At least 10 chars"
+               data-msg-maxlength="At most 200 chars"               
                value="<?= $this->escape($this->element->getValue()) ?>"
                name="<?= $this->escape($this->element->getName()) ?>"/>
         <?php if ($this->element->getMessages()) {
