--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -220,7 +220,7 @@ $forum_url_postfix = Zend_Auth::getInstance()->hasIdentity() ? '/session/sso' : 
                 ?>
 
             <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">             
-               <li><a href="<?=$url_forum?><?=$forum_url_postfix?>" target="_blank"> Forum</a> </li>
+               <li><a href="<?=$url_forum?>" target="_blank"> Forum</a> </li>
                <li><a href="<?=$url_blog?>" target="_blank"> Blog</a> </li>
                <li><a  id="plingList" href="#plings" > What are Plings? </a> </li>             
                <li> <a id="aboutContent" href="#">About </a>   </li>              
