--- a/application/modules/default/views/scripts/authorization/partials/forgotSuccess.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/forgotSuccess.phtml
@@ -26,6 +26,7 @@
     <div
         class="lightblue center"><?= $this->translate('If the email address is registered, we will send a message to your account with a new password.') ?></div>
     <p class="center"><?= $this->translate('Please check your email account and change the password as soon as possible.') ?></p>
+    <div class="center"><a name="back" id="back" class="btn btn-min-width btn-native" href="/">Back to Homepage</a></div>
 
 </div>
 
