--- a/application/modules/default/views/scripts/settings/partials/picture-bg.phtml
+++ b/application/modules/default/views/scripts/settings/partials/picture-bg.phtml
@@ -68,7 +68,7 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
-        ImagePreview.initProfilePictureBackground();
+        //ImagePreview.initProfilePictureBackground();
         PartialFormsAjaxMemberBg.setup();
     });
 </script>
