--- a/application/modules/default/views/scripts/settings/partials/picture.phtml
+++ b/application/modules/default/views/scripts/settings/partials/picture.phtml
@@ -67,7 +67,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        ImagePreview.initProfilePicture();
+        //ImagePreview.initProfilePicture();
         AjaxFormWithProgress.setup($('form.standard-form.partialajax').get(0));
     });
 </script>
