--- a/application/modules/default/views/scripts/settings/partials/picture-bg.phtml
+++ b/application/modules/default/views/scripts/settings/partials/picture-bg.phtml
@@ -70,5 +70,25 @@
     $(document).ready(function () {
         ImagePreview.initProfilePictureBackground();
         PartialFormsAjaxMemberBg.setup();
+        
+        //init delete bg pic
+        $('body').on('click', '.delete_bg_img', function (event) {
+            event.stopPropagation();
+            var imageTarget = $('#profile_image_url_bg').data('target');
+            
+            jQuery.ajax({
+                data: '',
+                url: '/settings/deletepicturebackground',
+                type: 'GET',
+                error: function () {
+                    alert('Error');
+                    return false;
+                },
+                success: function (results) {
+                    $('#profile-picture-background-preview').attr('src', '/img/default.png');
+                    return false;
+                }
+            });
+        });
     });
 </script>
