--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -25,6 +25,7 @@ $this->tab = 'add';
 $helperImage = new Default_View_Helper_Image();
 $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helpProductUrl = new Default_View_Helper_BuildProductUrl();
+$architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
 
 $modelCategory = new Default_Model_DbTable_ProjectCategory();
 $valueCatId = $this->form->project_category_id->getValue();
@@ -275,6 +276,7 @@ $this->inlineScript()->appendScript('
                                      data-addpploadfile-uri="<?= $helpProductUrl->buildProductUrl('@@project_id@@', 'addpploadfile') ?>"
                                      data-updatepploadfile-uri="<?= $helpProductUrl->buildProductUrl('@@project_id@@', 'updatepploadfile') ?>"
                                      data-updatepackagetype-uri="<?= $helpProductUrl->buildProductUrl('@@project_id@@', 'updatepackagetype') ?>"
+                                     data-updatearchitecture-uri="<?= $helpProductUrl->buildProductUrl('@@project_id@@', 'updatearchitecture') ?>"
                                      data-deletepploadfile-uri="<?= $helpProductUrl->buildProductUrl('@@project_id@@', 'deletepploadfile') ?>"
                                      data-deletepploadfiles-uri="<?= $helpProductUrl->buildProductUrl('@@project_id@@', 'deletepploadfiles') ?>">
                                     <div class="pling-modal" style="width: 100%;">
@@ -297,6 +299,7 @@ $this->inlineScript()->appendScript('
                                                             <!--<th><?= $this->translate('License') ?></th>-->
                                                             <!--<th><?= $this->translate('Filetype') ?></th>-->
                                                             <th><?= $this->translate('Packagetype') ?></th>
+                                                            <th><?= $this->translate('Architecture') ?></th>
                                                             <th><?= $this->translate('Date added') ?></th>
 
                                                             <th style="text-align: right"><?= $this->translate('Filesize') ?></th>
@@ -760,6 +763,7 @@ $this->inlineScript()->appendScript('
                                 var license = '';
                                 var licenseId = '';
                                 var packagetypeId = '';
+                                var architectureId = '';
 
 
                                 //var packageId = null;
@@ -776,6 +780,8 @@ $this->inlineScript()->appendScript('
                                                 licenseId = tagStr[1];
                                             } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                                 packagetypeId = tagStr[1];
+                                            } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                                architectureId = tagStr[1];
                                             }
                                         } else {
                                             var tagStr = this.split('##');
@@ -786,6 +792,8 @@ $this->inlineScript()->appendScript('
                                                 license = Base64.decode(license);
                                             } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                                 packagetypeId = tagStr[1];
+                                            } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                                architectureId = tagStr[1];
                                             }
                                         }
                                     });
@@ -841,6 +849,23 @@ $this->inlineScript()->appendScript('
                                     + '<option value=\"4\">Windows executable</option>'
                                     + '</select>'
                                     + '</td>'
+                            
+                                    + '<td>'
+                                    + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
+                                    + '    <option value=""></option>'
+                                        <?php
+                                        // force $value to array so we can compare multiple values to multiple
+                                        // options; also ensure it's a string for comparison purposes.
+                                        $tagList = $architectureListHelper->fetchList();
+                                        foreach ($tagList as $opt_value => $opt_label) {
+                                        ?>
+                                          + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                        <?php
+                                        }
+                                        ?>
+                                    + '</select>'
+                                    + '</td>'
+                            
                                     + '<td>' + this.created_timestamp + '</td>'
                                     + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                                     + '<td>' + deletePploadFileBtnPerFile + '</td>'
@@ -849,6 +874,8 @@ $this->inlineScript()->appendScript('
 
                                 //$("#data-select-license" + this.id + " option[value='"+licenseId+"']").attr('selected', 'selected');
                                 $("#data-select-packagetype" + this.id + " option[value='"+packagetypeId+"']").attr('selected', 'selected');
+                                
+                                $("#data-select-architecture" + this.id + " option[value='"+architectureId+"']").attr('selected', 'selected');
                                 
                                 /*
                                 $licenseSelect = $modalPpload.find('#data-select-license' + this.id);
@@ -860,6 +887,11 @@ $this->inlineScript()->appendScript('
                                 $packagetypeSelect = $modalPpload.find('#data-select-packagetype' + this.id);
                                 if(this.active == '0') {
                                     $packagetypeSelect.prop('disabled', 'disabled');
+                                }
+                                
+                                $architectureSelect = $modalPpload.find('#data-select-architecture' + this.id);
+                                if(this.active == '0') {
+                                    $architectureSelect.prop('disabled', 'disabled');
                                 }
 
                                 if ((typeof link != 'undefined') && (link != "")) {
@@ -1039,6 +1071,24 @@ $this->inlineScript()->appendScript('
                                 + '<option value=\"4\">Windows executable</option>'
                                 + '</select>'
                                 + '</td>'
+                                
+                                + '<td>'
+                                + '<select class="form-control input-sm" id="data-select-architecture' + data.file.id + '" data-architecture-id="" name="architecture">'
+                                + '    <option value=""></option>'
+                                    <?php
+                                    // force $value to array so we can compare multiple values to multiple
+                                    // options; also ensure it's a string for comparison purposes.
+                                    $tagList = $architectureListHelper->fetchList();
+                                    foreach ($tagList as $opt_value => $opt_label) {
+                                    ?>
+                                      + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                    <?php
+                                    }
+                                    ?>
+                                + '</select>'
+                                + '</td>'
+                        
+                        
                                 + '<td>' + data.file.created_timestamp + '</td>'
                                 + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
                                 + '<td><a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-deletepploadfile-btn=""><span class="glyphicon glyphicon-trash"></span></a></td>'
@@ -1113,7 +1163,7 @@ $this->inlineScript()->appendScript('
                         }
                     });
                 }
-
+                
                 function updatePploadFileVersion(fileId, version) {
                     var $url = ($modalPpload.attr('data-updatepploadfile-uri')).replace(/@@project_id@@/i, ProductForm.project_id);
                     if (typeof ProductForm.project_id == 'undefined' || ProductForm.project_id == '' || ProductForm.project_id == '0') {
@@ -1510,6 +1560,29 @@ $this->inlineScript()->appendScript('
                     updatePploadFileTags(fileId, newFileTags);
                     $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                     updatePackageType(fileId, packagetypeId);
+                });
+                
+                $modalPpload.on('change', 'select[id*=data-select-architecture]', function(event) {
+                    event.preventDefault();
+                    var fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
+                    var fileTags = $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags');
+                    var architectureId = $modalPpload.find('#data-select-architecture' + fileId).val();
+
+                    var newFileTags = '';
+                    if (fileTags) {
+
+                        $.each(fileTags.split(','), function () {
+                            // skip old entries
+                            if ((this.length == 0) || (this.indexOf('architectureid-') == 0) || (this.indexOf('architectureid##') == 0)) {
+                                return true;
+                            }
+                            newFileTags += ',' + this;
+                        });
+
+                    }
+                    newFileTags += ',architectureid-'+architectureId;
+                    updatePploadFileTags(fileId, newFileTags);
+                    $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
                 });
 
         });
