--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -78,6 +78,8 @@ if (Zend_Auth::getInstance()->hasIdentity()){
 $tableProjectFollower = new Default_Model_DbTable_ProjectFollower();
 $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->project_id);
 
+$projectplings = new Default_Model_ProjectPlings();
+$this->projectplings = $projectplings->fetchPlingsForProject($this->product->project_id);
 ?>
 
     <!-- facebook -->
@@ -408,6 +410,9 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                          <?php if(count($this->likes)>0){ ?>
                             <li><a href="#likes-panel" data-toggle="tab">Favs <?php echo '('.count($this->likes).')';  ?></a></li>
                         <?php } ?>
+                        <?php if(count($this->projectplings)>0){ ?>
+                            <li><a href="#plings-panel" data-toggle="tab">Plings <?php echo '('.count($this->projectplings).')';  ?></a></li>
+                        <?php } ?>
                         </ul>
                     </div>
                     <!-- /TABS -->
@@ -520,6 +525,21 @@ $this->likes = $tableProjectFollower->fetchLikesForProject($this->product->proje
                                 <div id="productLikesContainer">
                                 <?php                                    
                                        echo $this->render('product/partials/productLikes.phtml');                                   
+                                  ?>
+                                  </div>
+                            </article>
+                            </div>
+                        </div>
+                        <?php } ?>
+
+                        <!-- ratings panel -->
+                        <?php  if (count($this->projectplings) > 0) { ?>
+                        <div class="tab-pane" id="plings-panel">
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+                            <article>
+                                <div id="productPlingsContainer">
+                                <?php                                    
+                                       echo $this->render('product/partials/productPlings.phtml');                                   
                                   ?>
                                   </div>
                             </article>
