--- a/application/modules/default/views/scripts/product/partials/productPlings.phtml
+++ b/application/modules/default/views/scripts/product/partials/productPlings.phtml
@@ -20,7 +20,37 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 ?>
-                                                                       
+           
+<style type="text/css">
+    
+    #plings-panel .u-wrap {
+    float: left;
+    padding: .3em;
+    border: .35em solid #dee0e0;
+    border-radius: 5px;
+    height: 14em;
+    margin-bottom: 1em;
+    background: #fff;
+    width: 115px;
+    height: 200px;
+    margin-right: 10px;
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -ms-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+}
+
+#plings-panel .u-wrap figure img {
+    width: 100%;
+    border: 1px solid #dbdbdb;
+    -webkit-border-radius: 999px;
+    -moz-border-radius: 999px;
+    border-radius: 999px;
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+}
+</style>                                                            
  <?php 
         foreach ($this->projectplings as $user) {                                  
     ?>
@@ -32,7 +62,7 @@
                     </figure>
                     <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($user['username']); ?></h3>                                                   
                 </a>
-                 <span class="small"><i class="fa fa-heart myfav" aria-hidden="true"></i> <?= $this->printDate($user['created_at'])?></span>
+                 <span class="small"><i class="fa fa-check myfav" aria-hidden="true"></i> <?= $this->printDate($user['created_at'])?></span>
             </div>
         </div>
 <?php } ?>
