--- a/application/modules/default/views/scripts/product/partials/productPlings.phtml
+++ b/application/modules/default/views/scripts/product/partials/productPlings.phtml
@@ -50,6 +50,16 @@
     -moz-background-clip: padding;
     background-clip: padding-box;
 }
+
+#plings-panel .u-wrap h3 {
+    font-size: 13px;
+    font-weight: 700;
+    word-wrap: break-word;
+    line-height: 20px;
+    height: 20px;
+    padding: 0;
+    margin: 0;
+}
 </style>                                                            
  <?php 
         foreach ($this->projectplings as $user) {                                  
