--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -46,7 +46,7 @@ if ($member_id && $isSupporter && $isPlinged) {
 }
 
 $heartatt = $heartatt. 'role="button" data-fragment=""  '
-	      .' data-target="#container-follow'.$this->project_id.'"'
+	      .' data-target="#container-pling'.$this->project_id.'"'
 	      .' data-href="'.$urlUserFollows.'"'
             .' data-issupporter="'.$isSupporter.'"'
 	      .' data-auth="'.$member_id.'"';
