--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -53,14 +53,14 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
 if($cntplings>0){
        if ($isPlinged){
-            $out = $out. '<i class="fa fa-check heartproject " aria-hidden="true" '.$heartatt.'></i>';
+            $out = $out. '<i class="fa fa-check heartproject " aria-hidden="true"></i>';
             $out = $out. '<span class="heartnumber small " >'.$cntplings.'</span>';
        }else{
-            $out = $out. '<i class="fa fa-check heartgrey " aria-hidden="true" '.$heartatt.'></i>';
+            $out = $out. '<i class="fa fa-check heartgrey " aria-hidden="true"></i>';
             $out = $out. '<span class="heartnumber heartnumberpurple small  " >'.$cntplings.'</span>';
        }
 }else{
-            $out = $out. '<i class="fa fa-check heartgrey " aria-hidden="true" '.$heartatt.'></i>';        
+            $out = $out. '<i class="fa fa-check heartgrey " aria-hidden="true" ></i>';        
 }
 
  $out = $out.'</div>';
