--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -67,4 +67,12 @@ if($cntplings>0){
 echo $out;
 ?>
 
+<style type="text/css">
+     .partialbuttonplingproject span.heartnumber{
+            top:0;
+            left:35px;
+      }
+
+</style>
+
 
