--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -276,6 +276,8 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                             </div>
                           
                             <div class="product-title-right" >
+
+                                <?php /*
                                     <div class="projectdtailHeart">
                                         <div id="container-follow<?=$this->product->project_id?>">     
                                         <?php                                 
@@ -290,6 +292,8 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                         </div>  
                                                       
                                     </div>
+                                    */
+                                    ?>
 
                                     <div class="projectdtailHeart">
                                         <div id="container-pling<?=$this->product->project_id?>">     
