--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1849,6 +1849,7 @@ ul.meta-nav-top
           color:white;
           display: block;
           margin: auto;
+          width: 30px;
         }
 
         span.heartnumberpurple{
