--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -52,11 +52,11 @@ $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
 
             $out = $out. '<img src="/images/system/coin.png" style="width:50px;height:50px"></img>';
 
-            $out = $out. '<span class="heartnumber small " >'.$cntplings.'</span>';
+            $out = $out. '<span class="heartnumber " >'.$cntplings.'</span>';
        }else{
             //$out = $out. '<i class="fa fa-check heartgrey " aria-hidden="true"></i>';
             $out = $out. '<img src="/images/system/coin.png" style="width:50px;height:50px"></img>';
-            $out = $out. '<span class="heartnumber heartnumberpurple small  " >'.$cntplings.'</span>';
+            $out = $out. '<span class="heartnumber heartnumberpurple " >'.$cntplings.'</span>';
        }
 
 
