--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -42,22 +42,16 @@ $urlUserFollows = $this->buildProductUrl($this->project_id, 'plingproject');
 $heartatt = $heartatt. 'role="button" data-fragment=""  '
 	      .' data-target="#container-pling'.$this->project_id.'"'
 	      .' data-href="'.$urlUserFollows.'"'
-            .' data-issupporter="'.$isSupporter.'"'
+                         .' data-issupporter="'.$isSupporter.'"'                         
 	      .' data-auth="'.$member_id.'"';
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
-
-       if ($isPlinged){
-
-            //$out = $out. '<i class="fa fa-check heartproject " aria-hidden="true"></i>';
-
-            $out = $out. '<img src="/images/system/coin.png" style="width:50px;height:50px"></img>';
-
-            $out = $out. '<span class="heartnumber " >'.$cntplings.'</span>';
-       }else{
-            //$out = $out. '<i class="fa fa-check heartgrey " aria-hidden="true"></i>';
-            $out = $out. '<img src="/images/system/coin.png" style="width:50px;height:50px"></img>';
-            $out = $out. '<span class="heartnumber heartnumberpurple " >'.$cntplings.'</span>';
-       }
+ if ($isPlinged){
+      $out = $out. '<img src="/images/system/coin.png" ></img>';
+      $out = $out. '<span class="heartnumber heartnumberpurple" >'.$cntplings.'</span>';
+ }else{            
+      $out = $out. '<img src="/images/system/coin.png"></img>';
+      $out = $out. '<span class="heartnumber" >'.$cntplings.'</span>';
+ }
 
 
  $out = $out.'</div>';
