--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -296,7 +296,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                     ?>
 
                                     <div class="projectdtailHeart">
-                                        <div id="container-pling<?=$this->product->project_id?>">     
+                                        <div id="container-pling<?=$this->product->project_id?>" class="container-pling">     
                                         <?php                                 
                                             echo $this->partial(
                                                 '/product/projectplings.phtml',
