--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1826,6 +1826,13 @@ ul.meta-nav-top
                 float: right;
                 text-align: center;
             }
+            .container-pling{
+              position: relative;
+              img{
+                width: 50px;
+                height: 50px;
+              }
+            }
         }
         .heartproject{
           position:relative;
